--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | kisekaedrpym</title>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      UnityLoader.instantiate("unityContainer", "Build/kisekaedoctor_0.1.json");
+        UnityLoader.instantiate("unityContainer", "Build/kisekaedoctor_0.1.json");
+
     </script>
-  </head>
-  <body>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
     <div id="unityContainer" style="width: 600px; height: 900px; margin: auto"></div>
-  </body>
+    <div>2020/08/08　ver0.1</div>
+</body>
+
 </html>
