--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | kisekaedrpym</title>
+    <title>change the doctor</title>
     <script src="Build/UnityLoader.js"></script>
     <script>
-        UnityLoader.instantiate("unityContainer", "Build/kisekaedoctor_0.1.json");
+        UnityLoader.instantiate("unityContainer", "Build/kisekaedoctor_0.2.json");
 
     </script>
     <link rel="stylesheet" href="style.css">
