--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en-us">
-
-<head>
+  <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>change the doctor</title>
     <script src="Build/UnityLoader.js"></script>
     <script>
-        UnityLoader.instantiate("unityContainer", "Build/kisekaedoctor_0.2.json");
-
+      UnityLoader.instantiate("unityContainer", "Build/kisekaedoctor_0.2.json");
     </script>
-    <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
+      <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
     <div id="unityContainer" style="width: 600px; height: 900px; margin: auto"></div>
-    <div>2020/08/08　ver0.1</div>
-</body>
-
+  </body>
+    <div>2020/08/09　ver.0.2<br>
+        2020/08/08　ver0.1
+    </div>
 </html>
