--- a/index.html
+++ b/index.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>change the doctor</title>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      UnityLoader.instantiate("unityContainer", "Build/kisekaedoctor_0.2.json");
+        UnityLoader.instantiate("unityContainer", "Build/kisekaedoctor_0.2.json");
+
     </script>
-      <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
     <div id="unityContainer" style="width: 600px; height: 900px; margin: auto"></div>
-  </body>
-    <div>2020/08/09　ver.0.2<br>
-        2020/08/08　ver0.1
-    </div>
+</body>
+<div>
+    2020/08/09　ver.0.2/Add tenth<br>
+    2020/08/08　ver0.1/Released<br>
+</div>
+<div><a href="https://twitter.com/hitodeo0">twitter</a></div>
+<!-- FC2カウンター ここから -->
+<script language="javascript" type="text/javascript" src="//counter1.fc2.com/counter.php?id=89488004"></script><noscript><img src="//counter1.fc2.com/counter_img.php?id=89488004" /></noscript>
+<!-- FC2カウンター ここまで -->
+
 </html>
