--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="unityContainer" style="width: 600px; height: 900px; margin: auto"></div>
 </body>
 <div>
-    2020/08/09　ver.0.2/Add tenth<br>
+    2020/08/09　ver.0.2/Added 10th and 11th<br>
     2020/08/08　ver0.1/Released<br>
 </div>
 <div><a href="https://twitter.com/hitodeo0">twitter</a></div>
