--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     <div id="unityContainer" style="width: 600px; height: 900px; margin: auto"></div>
 </body>
 <div>
+    2020/08/10　ver.0.3/Added 4th, UI upgraded<br>
     2020/08/09　ver.0.2/Added 10th and 11th and 12th<br>
-    2020/08/08　ver0.1/Released<br>
+    2020/08/08　ver.0.1/Released<br>
 </div>
 <div><a href="https://twitter.com/hitodeo0">twitter</a></div>
 <!-- FC2カウンター ここから -->
