--- a/index.html
+++ b/index.html
@@ -22,9 +22,23 @@
     2020/08/09　ver.0.2/Added 10th and 11th and 12th<br>
     2020/08/08　ver.0.1/Released<br>
 </div>
-<div><a href="https://twitter.com/hitodeo0">twitter</a></div>
+<div><a href="https://twitter.com/hitodeo0">twitter</a><br>
+    <a href="https://hitodeo0.github.io/shinkai11000m/">top</a></div>
 <!-- FC2カウンター ここから -->
 <script language="javascript" type="text/javascript" src="//counter1.fc2.com/counter.php?id=89488004"></script><noscript><img src="//counter1.fc2.com/counter_img.php?id=89488004" /></noscript>
 <!-- FC2カウンター ここまで -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-145402471-4"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-145402471-4');
+
+</script>
 
 </html>
