--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     2020/08/10　ver.0.3/Added 4th and others, UI upgraded<br>
     2020/08/09　ver.0.2/Added 10th and 11th and 12th<br>
     2020/08/08　ver.0.1/Released<br>
-</div>
-<div><a href="https://twitter.com/hitodeo0">twitter</a><br>
-    <a href="https://hitodeo0.github.io/shinkai11000m/">top</a></div>
+</div><br>
+<div><a href="https://twitter.com/hitodeo0" target="_blank">twitter</a><br>
+    <a href="https://hitodeo0.github.io/shinkai11000m/" target="_blank">top</a></div>
 <!-- FC2カウンター ここから -->
 <script language="javascript" type="text/javascript" src="//counter1.fc2.com/counter.php?id=89488004"></script><noscript><img src="//counter1.fc2.com/counter_img.php?id=89488004" /></noscript>
 <!-- FC2カウンター ここまで -->
