--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="unityContainer" style="width: 600px; height: 900px; margin: auto"></div>
 </body>
 <div>
-    2020/08/11　ver.0.4/Added 3rd, Fixed bug<br>
+    2020/08/11　ver.0.4/Added 3rd and 8th, Fixed bug<br>
     2020/08/10　ver.0.3/Added 4th and others, UI upgraded<br>
     2020/08/09　ver.0.2/Added 10th and 11th and 12th<br>
     2020/08/08　ver.0.1/Released<br>
