--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>change the doctor</title>
+    <title>change the doctors</title>
     <script src="Build/UnityLoader.js"></script>
     <script>
         UnityLoader.instantiate("unityContainer", "Build/kisekaedoctor_0.2.json");
@@ -16,14 +16,26 @@
 <body>
     <div id="unityContainer" style="width: 600px; height: 900px; margin: auto"></div>
 </body>
+<br>
+<div><a href="https://twitter.com/hitodeo0" target="_blank">twitter</a><br>
+    <a href="https://hitodeo0.github.io/shinkai11000m/" target="_blank">top</a></div>
+<br>
+<hr>
 <div>
+    <h1>Change the Doctors</h1>
+    This is just an unfinished fan game.<br>
+    Post your dressed-up doctor to <a href="https://twitter.com/search?q=%20%23changethedoctors&src=typed_query" target="_blank">#changethedoctors</a> if you like.<br>
+</div>
+<br>
+<div>
+    2020/08/14　Ver.0.5/Added clothes<br>
     2020/08/11　ver.0.4/Added 3rd and 8th, Fixed bug<br>
     2020/08/10　ver.0.3/Added 4th and others, UI upgraded<br>
     2020/08/09　ver.0.2/Added 10th and 11th and 12th<br>
     2020/08/08　ver.0.1/Released<br>
-</div><br>
-<div><a href="https://twitter.com/hitodeo0" target="_blank">twitter</a><br>
-    <a href="https://hitodeo0.github.io/shinkai11000m/" target="_blank">top</a></div>
+</div>
+<br>
+<hr>
 <!-- FC2カウンター ここから -->
 <script language="javascript" type="text/javascript" src="//counter1.fc2.com/counter.php?id=89488004"></script><noscript><img src="//counter1.fc2.com/counter_img.php?id=89488004" /></noscript>
 <!-- FC2カウンター ここまで -->
