--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>change the doctors</title>
     <script src="Build/UnityLoader.js"></script>
     <script>
-        UnityLoader.instantiate("unityContainer", "Build/kisekaedoctor_0.2.json");
+        UnityLoader.instantiate("unityContainer", "Build/kisekaedoctor1.0.json");
 
     </script>
     <link rel="stylesheet" href="style.css">
@@ -28,6 +28,7 @@
 </div>
 <br>
 <div>
+    2020/11/08　Ver.1.0/Added 1st, 5th, 6th, 7th. Completed the Doctor.
     2020/08/14　Ver.0.5/Added clothes<br>
     2020/08/11　ver.0.4/Added 3rd and 8th, Fixed bug<br>
     2020/08/10　ver.0.3/Added 4th and others, UI upgraded<br>
