--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 </div>
 <br>
 <div>
-    2020/11/09　Ver.1.1/Fixed the colors and other details.<br>
-    2020/11/08　Ver.1.0/Added 1st, 5th, 6th, 7th. Completed the Doctor.<br>
+    2020/11/09　Ver.1.1/Fixed the colors and other details<br>
+    2020/11/08　Ver.1.0/Added 1st, 5th, 6th, 7th, Completed the Doctor<br>
     2020/08/14　Ver.0.5/Added clothes<br>
     2020/08/11　ver.0.4/Added 3rd and 8th, Fixed bug<br>
     2020/08/10　ver.0.3/Added 4th and others, UI upgraded<br>
