--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <h1>Change the Doctors</h1>
     This is just an unfinished fan game.<br>
     Post your dressed-up doctor to <a href="https://twitter.com/search?q=%20%23changethedoctors&src=typed_query" target="_blank">#changethedoctors</a> if you like.<br>
+    <br>
+    これは非公式二次創作です。<br>
+    いい感じのドクターができたら <a href="https://twitter.com/search?q=%20%23changethedoctors&src=typed_query" target="_blank">#changethedoctors</a> で呟いていただけると嬉しいです。<br>
 </div>
 <br>
 <div>
