--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <hr>
 <div>
     <h1>Change the Doctors</h1>
-    This is just an unfinished fan game.<br>
+    This is just a fan game.<br>
     Post your dressed-up doctor to <a href="https://twitter.com/search?q=%20%23changethedoctors&src=typed_query" target="_blank">#changethedoctors</a> if you like.<br>
     <br>
     これは非公式二次創作です。<br>
