--- a/index.html
+++ b/index.html
@@ -4,21 +4,22 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>change the doctors</title>
     <script src="Build/UnityLoader.js"></script>
     <script>
         UnityLoader.instantiate("unityContainer", "Build/kisekaedoctor1.0.json");
-
     </script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://hitodeo0.github.io/shinkai11000m/style.css">
 </head>
 
 <body>
-    <div id="unityContainer" style="width: 600px; height: 900px; margin: auto"></div>
+    <div id="unityContainer" class="unity" style="margin: auto"></div>
 </body>
 <br>
 <div><a href="https://twitter.com/hitodeo0" target="_blank">twitter</a><br>
-    <a href="https://hitodeo0.github.io/shinkai11000m/" target="_blank">top</a></div>
+    <a href="https://hitodeo0.github.io/shinkai11000m/" target="_blank">top</a>
+</div>
 <br>
 <hr>
 <div>
@@ -55,7 +56,4 @@
     gtag('js', new Date());
 
     gtag('config', 'UA-145402471-4');
-
-</script>
-
-</html>
+</script></html>
