--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div id="unityContainer" class="unity" style="margin: auto"></div>
+    <div id="unityContainer" class="unity600900" style="width: 600px; height: 900px;  margin: auto"></div>
 </body>
 <br>
 <div><a href="https://twitter.com/hitodeo0" target="_blank">twitter</a><br>
