--- a/index.html
+++ b/index.html
@@ -9,51 +9,56 @@
     <script src="Build/UnityLoader.js"></script>
     <script>
         UnityLoader.instantiate("unityContainer", "Build/kisekaedoctor1.0.json");
+
     </script>
     <link rel="stylesheet" href="https://hitodeo0.github.io/shinkai11000m/style.css">
 </head>
 
 <body>
     <div id="unityContainer" class="unity600900" style="width: 600px; height: 900px;  margin: auto"></div>
-</body>
-<br>
-<div><a href="https://twitter.com/hitodeo0" target="_blank">twitter</a><br>
-    <a href="https://hitodeo0.github.io/shinkai11000m/" target="_blank">top</a>
-</div>
-<br>
-<hr>
-<div>
-    <h1>Change the Doctors</h1>
-    This is just a fan game.<br>
-    Post your dressed-up doctor to <a href="https://twitter.com/search?q=%20%23changethedoctors&src=typed_query" target="_blank">#changethedoctors</a> if you like.<br>
+
     <br>
-    これは非公式二次創作です。<br>
-    いい感じのドクターができたら <a href="https://twitter.com/search?q=%20%23changethedoctors&src=typed_query" target="_blank">#changethedoctors</a> で呟いていただけると嬉しいです。<br>
-</div>
-<br>
-<div>
-    2020/11/09　Ver.1.1/Fixed the colors and other details<br>
-    2020/11/08　Ver.1.0/Added 1st, 5th, 6th, 7th, Completed the Doctor<br>
-    2020/08/14　Ver.0.5/Added clothes<br>
-    2020/08/11　ver.0.4/Added 3rd and 8th, Fixed bug<br>
-    2020/08/10　ver.0.3/Added 4th and others, UI upgraded<br>
-    2020/08/09　ver.0.2/Added 10th and 11th and 12th<br>
-    2020/08/08　ver.0.1/Released<br>
-</div>
-<br>
-<hr>
-<!-- FC2カウンター ここから -->
-<script language="javascript" type="text/javascript" src="//counter1.fc2.com/counter.php?id=89488004"></script><noscript><img src="//counter1.fc2.com/counter_img.php?id=89488004" /></noscript>
-<!-- FC2カウンター ここまで -->
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-145402471-4"></script>
-<script>
-    window.dataLayer = window.dataLayer || [];
+    <div><a href="https://twitter.com/hitodeo0" target="_blank">twitter</a><br>
+        <a href="https://hitodeo0.github.io/shinkai11000m/" target="_blank">top</a>
+    </div>
+    <br>
+    <hr>
+    <div>
+        <h1>Change the Doctors</h1>
+        This is just a fan game.<br>
+        Post your dressed-up doctor to <a href="https://twitter.com/search?q=%20%23changethedoctors&src=typed_query" target="_blank">#changethedoctors</a> if you like.<br>
+        <br>
+        これは非公式二次創作です。<br>
+        いい感じのドクターができたら <a href="https://twitter.com/search?q=%20%23changethedoctors&src=typed_query" target="_blank">#changethedoctors</a> で呟いていただけると嬉しいです。<br>
+    </div>
+    <br>
+    <div>
+        2020/11/09　Ver.1.1/Fixed the colors and other details<br>
+        2020/11/08　Ver.1.0/Added 1st, 5th, 6th, 7th, Completed the Doctor<br>
+        2020/08/14　Ver.0.5/Added clothes<br>
+        2020/08/11　ver.0.4/Added 3rd and 8th, Fixed bug<br>
+        2020/08/10　ver.0.3/Added 4th and others, UI upgraded<br>
+        2020/08/09　ver.0.2/Added 10th and 11th and 12th<br>
+        2020/08/08　ver.0.1/Released<br>
+    </div>
+    <br>
+    <hr>
+    <!-- FC2カウンター ここから -->
+    <script language="javascript" type="text/javascript" src="//counter1.fc2.com/counter.php?id=89488004"></script><noscript><img src="//counter1.fc2.com/counter_img.php?id=89488004" /></noscript>
+    <!-- FC2カウンター ここまで -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145402471-4"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-    function gtag() {
-        dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
 
-    gtag('config', 'UA-145402471-4');
-</script></html>
+        gtag('config', 'UA-145402471-4');
+
+    </script>
+</body>
+
+</html>
