--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
     <script src="Build/UnityLoader.js"></script>
     <script>
         UnityLoader.instantiate("unityContainer", "Build/kisekaedoctor1.0.json");
-
     </script>
     <link rel="stylesheet" href="https://hitodeo0.github.io/shinkai11000m/style.css">
 </head>
 
 <body>
     <div id="unityContainer" class="unity600900" style="width: 600px; height: 900px;  margin: auto"></div>
-
     <br>
     <div><a href="https://twitter.com/hitodeo0" target="_blank">twitter</a><br>
         <a href="https://hitodeo0.github.io/shinkai11000m/" target="_blank">top</a>
@@ -32,7 +30,7 @@
         いい感じのドクターができたら <a href="https://twitter.com/search?q=%20%23changethedoctors&src=typed_query" target="_blank">#changethedoctors</a> で呟いていただけると嬉しいです。<br>
     </div>
     <br>
-    <div>
+    <div class="history">
         2020/11/09　Ver.1.1/Fixed the colors and other details<br>
         2020/11/08　Ver.1.0/Added 1st, 5th, 6th, 7th, Completed the Doctor<br>
         2020/08/14　Ver.0.5/Added clothes<br>
@@ -57,8 +55,5 @@
         gtag('js', new Date());
 
         gtag('config', 'UA-145402471-4');
-
     </script>
-</body>
-
-</html>
+</body></html>
