--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>change the doctors</title>
     <script src="Build/UnityLoader.js"></script>
     <script>
         UnityLoader.instantiate("unityContainer", "Build/kisekaedoctor1.0.json");
+
     </script>
     <link rel="stylesheet" href="https://hitodeo0.github.io/shinkai11000m/style.css">
 </head>
@@ -55,5 +55,8 @@
         gtag('js', new Date());
 
         gtag('config', 'UA-145402471-4');
+
     </script>
-</body></html>
+</body>
+
+</html>
