--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://hitodeo0.github.io/shinkai11000m/style.css">
 </head>
 
-<body>
+<body class="app">
     <div id="unityContainer" class="unity600900" style="width: 600px; height: 900px;  margin: auto"></div>
     <br>
     <div><a href="https://twitter.com/hitodeo0" target="_blank">twitter</a><br>
