--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 
     </script>
     <link rel="stylesheet" href="https://hitodeo0.github.io/shinkai11000m/style.css">
+    
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@hitodeo0" />
+    <meta property="og:url" content="https://hitodeo0.github.io/kisekaedoctor/" />
+    <meta property="og:title" content="Change the Doctors" />
+    <meta property="og:description" content="This is just a fan game." />
+    <meta property="og:image" content="https://hitodeo0.github.io/shinkai11000m/img/kisekaedoctor.jpg" />
 </head>
 
 <body>
